--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "backend",
-  "private": true,
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "vercel dev",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "keywords": [],
